Software/QuickUsbEpcsProg/QuickUSB.h

typedef unsigned char         QBOOL;
typedef unsigned char         QBYTE;
typedef unsigned short        QWORD;
    typedef unsigned long           QULONG;
    typedef HANDLE                  QHANDLE;
    typedef unsigned long     QULONG;
    typedef signed short      QHANDLE;
    typedef QRESULT           QRETURN;
    typedef UInt32            QULONG;
    typedef QLONG             QHANDLE;
    typedef QRESULT           QRETURN;
typedef QHANDLE*              PQHANDLE;
typedef void*                 PQVOID;
typedef QBYTE*                PQBYTE;
typedef QCHAR*                PQCHAR;
typedef const QCHAR*          PCQCHAR;
typedef QWORD*                PQWORD;
typedef QULONG*               PQULONG;
/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  QuickUSB Structure Definitions
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
// Asynchronous Bulk Transfer Structure
// Packed on 8-byte boundaries to be x86 and x64 compatible
typedef struct QBULKSTREAM {
    QHANDLE         Handle;             // 4 Bytes (x86) or 8 Bytes (x64)
    PQBYTE          Buffer;             // 4 Bytes (x86) or 8 Bytes (x64)
    PQVOID          CompletionRoutine;  // 4 Bytes (x86) or 8 Bytes (x64)
    PQVOID          Tag;                // 4 Bytes (x86) or 8 Bytes (x64)
    PQVOID          InternalReserved;   // 4 Bytes (x86) or 8 Bytes (x64)
    PQVOID          InternalEvent;      // 4 Bytes (x86) or 8 Bytes (x64)

    QULONG          BytesRequested;     // 4 Bytes
    QULONG          BytesTransferred;   // 4 Bytes
    QULONG          Error;              // 4 Bytes
    QULONG          InternalStatus;     // 4 Bytes

    QULONG          Reserved;           // 4 Bytes
    QWORD           StructSize;         // 2 Bytes
    QSTREAMTYPE     StreamType;         // 1 Byte
    QCOMPLETIONTYPE CompletionType;     // 1 Byte

#if defined(_WIN32)
    OVERLAPPED InternalData;
#endif
} QBULKSTREAM, *PQBULKSTREAM;
/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  QuickUSB Callback and Completion Routine Definitions
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
typedef void (*PQBULKSTREAM_COMPLETION_ROUTINE)(PQBULKSTREAM BulkStream);
typedef void (*PQPROGRESS_CALLBACK)(QHANDLE hDevice, QWORD percentComplete, PQVOID tag);
QUSBLIB QRETURN QuickUsbOpen(
    PQHANDLE hDevice, 
    PQCHAR   deviceName
);
QUSBLIB QRETURN QuickUsbClose(
    QHANDLE hDevice
);
QUSBLIB QRETURN QuickUsbReadSetting(
    QHANDLE hDevice, 
    QWORD   address, 
    PQWORD  value
);
QUSBLIB QRETURN QuickUsbWriteSetting(
    QHANDLE hDevice,
    QWORD   address, 
    QWORD   value
);
QUSBLIB QRETURN QuickUsbReadPortDir(
    QHANDLE hDevice, 
    QWORD   address, 
    PQBYTE  data
);
QUSBLIB QRETURN QuickUsbWritePortDir(
    QHANDLE hDevice, 
    QWORD   address, 
    QBYTE   data
);
QUSBLIB QRETURN QuickUsbReadPort(
    QHANDLE hDevice, 
    QWORD   address, 
    PQBYTE  data, 
    PQWORD  length
);
QUSBLIB QRETURN QuickUsbWritePort(
    QHANDLE hDevice, 
    QWORD   address, 
    PQBYTE  data, 
    QWORD  length
);
QUSBLIB QRETURN QuickUsbSetRS232BaudRate(
    QHANDLE hDevice, 
    QULONG  baudRate
);
QUSBLIB QRETURN QuickUsbGetNumRS232(
    QHANDLE hDevice, 
    QBYTE   portNum, 
    PQWORD  length
);
QUSBLIB QRETURN QuickUsbFlushRS232(
    QHANDLE hDevice, 
    QBYTE   portNum
);
QUSBLIB QRETURN QuickUsbReadRS232(
    QHANDLE hDevice, 
    QBYTE   portNum, 
    PQBYTE  data, 
    PQWORD  length
);
QUSBLIB QRETURN QuickUsbWriteRS232(
    QHANDLE hDevice, 
    QBYTE   portNum, 
    PQBYTE  data, 
    QWORD   length
);
QUSBLIB QRETURN QuickUsbReadSpi(
    QHANDLE hDevice, 
    QBYTE   portNum,
    PQBYTE  data, 
    PQWORD  length
);
QUSBLIB QRETURN QuickUsbWriteSpi(
    QHANDLE hDevice, 
    QBYTE   portNum,
    PQBYTE  data, 
    QWORD   length
);
QUSBLIB QRETURN QuickUsbWriteReadSpi(
    QHANDLE hDevice, 
    QBYTE   portNum, 
    PQBYTE  data, 
    QWORD   length
);
QUSBLIB QRETURN QuickUsbReadI2C(
    QHANDLE hDevice, 
    QWORD   address, 
    PQBYTE  data, 
    PQWORD  length
);
QUSBLIB QRETURN QuickUsbWriteI2C(
    QHANDLE hDevice, 
    QWORD   address, 
    PQBYTE  data,
    QWORD   length
);
QUSBLIB QRETURN QuickUsbCachedWriteI2C(
    QHANDLE hDevice,
    QWORD   address,
    PQBYTE  data,
    QWORD   length
);
QUSBLIB QRETURN QuickUsbSetTimeout(
    QHANDLE hDevice,
    QULONG  timeOut
);
QUSBLIB QRETURN QuickUsbGetDriverVersion(
    PQWORD MajorDriverVersion,
    PQWORD MinorDriverVersion,
    PQWORD BuildDriverVersion
);
QUSBLIB QRETURN QuickUsbGetDllVersion(
    PQWORD MajorDllVersion,
    PQWORD MinorDllVersion,
    PQWORD BuildDllVersion
);
QUSBLIB QRETURN QuickUsbGetFirmwareVersion(
    QHANDLE hDevice, 
    PQWORD  MajorFirmwareVersion,
    PQWORD  MinorFirmwareVersion,
    PQWORD  BuildFirmwareVersion
);
QUSBLIB QRETURN QuickUsbWriteDataAsync(
    QHANDLE hDevice, 
    PQBYTE  data, 
    QULONG  length, 
    PQBYTE  transaction
);
QUSBLIB QRETURN QuickUsbReadDataAsync(
    QHANDLE hDevice, 
    PQBYTE  data, 
    PQULONG length, 
    PQBYTE  transaction
);
QUSBLIB QRETURN QuickUsbAsyncWait(
    QHANDLE hDevice, 
    PQULONG bytecount,
    QBYTE   transaction,
    QBYTE   immediate
);
// Asynchronous Bulk Transfer API
QUSBLIB QRETURN QuickUsbReadBulkDataAsync(
    QHANDLE hDevice,
    PQBYTE  buffer,
    QULONG  bytes,
    PQBULKSTREAM bulkStream,
    PQBULKSTREAM_COMPLETION_ROUTINE cRoutine,
    PQVOID  tag
);
        
QUSBLIB QRETURN QuickUsbWriteBulkDataAsync(
    QHANDLE hDevice,
    PQBYTE  buffer,
    QULONG  bytes,
    PQBULKSTREAM bulkStream,
    PQBULKSTREAM_COMPLETION_ROUTINE cRoutine,
    PQVOID  tag
);
QUSBLIB QRETURN QuickUsbBulkWait(
    QHANDLE      hDevice,
    PQBULKSTREAM bulkStream
);
// Streaming API
QUSBLIB QRETURN QuickUsbReadBulkDataStartStream(
    QHANDLE hDevice,
    PQBYTE buffers[],
    QULONG numBuffers,
    QULONG bufferSize,
    PQBULKSTREAM_COMPLETION_ROUTINE cRoutine,
    PQVOID  tag
);
QUSBLIB QRETURN QuickUsbWriteBulkDataStartStream(
    QHANDLE hDevice,
    PQBYTE buffers[],
    QULONG numBuffers,
    QULONG bufferSize,
    PQBULKSTREAM_COMPLETION_ROUTINE cRoutine,
    PQVOID  tag
);
QUSBLIB QRETURN QuickUsbBulkDataStopStream(
    QHANDLE hDevice,
    QBOOL wait
);
// Firmware Programming API
QUSBLIB QRETURN QuickUsbWriteFirmware(
    QHANDLE hDevice, 
    PCQCHAR fileName, 
    QULONG options, 
    PQPROGRESS_CALLBACK callback,
    PQVOID tag
);
QUSBLIB QRETURN QuickUsbVerifyFirmware(
    QHANDLE hDevice, PCQCHAR filename, 
    PQPROGRESS_CALLBACK callback,
    PQVOID tag
);
// EPCS Programming API
QUSBLIB QRETURN QuickUsbIdentifyEpcs(
    QHANDLE hDevice, 
    QBYTE nSS, 
    PQWORD epcsId, 
    PQULONG ecpsByteSize,
    QULONG flags
);
QUSBLIB QRETURN QuickUsbConfigureEpcs(
    QHANDLE hDevice,
    QBYTE nSS, 
    PCQCHAR filePath,
    QULONG flags, 
    PQPROGRESS_CALLBACK callback,
    PQVOID tag
);
QUSBLIB QRETURN QuickUsbVerifyEpcs(
    QHANDLE hDevice, 
    QBYTE nSS, 
    PCQCHAR filePath,
    QULONG flags, 
    PQPROGRESS_CALLBACK callback,
    PQVOID tag
);
QUSBLIB QRETURN QuickUsbEraseEpcs(
    QHANDLE hDevice, 
    QBYTE nSS,
    QULONG flags, 
    PQPROGRESS_CALLBACK callback,
    PQVOID tag
);