Software/QuickUsbDiagVB6/QuickUSB.bas


'=============================================================================
' QuickUSB General Purpose IO Functions
'=============================================================================
Declare Function QuickUsbReadPortDir Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   ByRef Data As Byte) As Long
Declare Function QuickUsbWritePortDir Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   ByVal Data As Byte) As Long
Declare Function QuickUsbReadPort Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWritePort Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByVal length As Integer) As Long


'=============================================================================
' QuickUSB RS-232 Port Functions
'=============================================================================
Declare Function QuickUsbSetRS232BaudRate Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal baudRate As Long) As Long
Declare Function QuickUsbGetNumRS232 Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, ByRef length As Integer) As Long
Declare Function QuickUsbFlushRS232 Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte) As Long
Declare Function QuickUsbReadRS232 Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, _
   Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWriteRS232 Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, _
   Data As Any, ByVal length As Integer) As Long
Declare Function QuickUsbReadRS232String Lib "QuickUsb" Alias "QuickUsbReadRS232" _
   (ByVal hDevice As Long, ByVal portNum As Byte, _
   ByVal str As String, ByRef length As Integer) As Long
Declare Function QuickUsbWriteRS232String Lib "QuickUsb" Alias "QuickUsbWriteRS232" _
   (ByVal hDevice As Long, ByVal portNum As Byte, _
   ByVal str As String, ByVal length As Integer) As Long


'=============================================================================
' QuickUSB SPI Port Functions
'=============================================================================
Declare Function QuickUsbReadSpi Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWriteSpi Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, Data As Any, ByVal length As Integer) As Long
Declare Function QuickUsbWriteReadSpi Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, Data As Any, ByVal length As Integer) As Long


'=============================================================================
' QuickUSB I2C Port Functions
'=============================================================================
Declare Function QuickUsbReadI2C Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWriteI2C Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByVal length As Integer) As Long
Declare Function QuickUsbCachedWriteI2C Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByVal length As Integer) As Long


'=============================================================================
' QuickUSB Status Functions
'=============================================================================
Declare Function QuickUsbGetDllVersion Lib "QuickUsb" _
   (ByRef major As Integer, ByRef minor As Integer, ByRef revision As Integer) As Long
Declare Function QuickUsbGetDriverVersion Lib "QuickUsb" _
   (ByRef major As Integer, ByRef minor As Integer, ByRef revision As Integer) As Long
Declare Function QuickUsbGetFirmwareVersion Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef major As Integer, ByRef minor As Integer, ByRef revision As Integer) As Long
Declare Function QuickUsbSetTimeout Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal Timeout As Long) As Long


'=============================================================================
' Asynchronous I/O Functions
'=============================================================================
Declare Function QuickUsbReadDataAsync Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef Data As Any, ByRef length As Long, _
   ByRef transaction As Byte) As Long
Declare Function QuickUsbWriteDataAsync Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef Data As Any, ByVal length As Long, _
   ByRef transaction As Byte) As Long
Declare Function QuickUsbAsyncWait Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef length As Long, ByVal transaction As Byte, _
   ByVal immediate As Byte) As Long
Declare Function QuickUsbReadBulkDataAsync Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef Data As Any, ByRef bytes As Long, _
   ByRef bulkstream As Any, ByVal cRoutine As Long, ByVal tag As Long) As Long
Declare Function QuickUsbWriteBulkDataAsync Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef Data As Any, ByRef bytes As Long, _
   ByRef bulkstream As Any, ByVal cRoutine As Long, ByVal tag As Long) As Long
Declare Function QuickUsbBulkWait Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef bulkstream As Any, _
   ByVal immediate As Byte) As Long


'=============================================================================
' Streaming Data Functions
'=============================================================================
Declare Function QuickUsbReadBulkDataStartStream Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef buffers As Any, ByVal numBuffers As Long, _
   ByVal bufferSize As Long, ByVal cRoutine As Long, ByVal tag As Long) As Long
Declare Function QuickUsbWriteBulkDataStartStream Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef buffers As Any, ByVal numBuffers As Long, _
   ByVal bufferSize As Long, ByVal cRoutine As Long, ByVal tag As Long) As Long
Declare Function QuickUsbBulkDataStopStream Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal wait As Boolean) As Long
   
   
'=============================================================================
' EPCS Programming API
'=============================================================================
Declare Function QuickUsbIdentifyEpcs Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal nSS As Byte, ByRef epcsId As Integer, _
   ByRef ecpsByteSize As Long, ByVal flags As Long) As Long
Declare Function QuickUsbConfigureEpcs Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal nSS As Byte, ByVal filePath As String, _
   ByVal flags As Long, ByVal callback As Long, ByVal tag As Long) As Long
Declare Function QuickUsbVerifyEpcs Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal nSS As Byte, ByVal filePath As String, _
   ByVal flags As Long, ByVal callback As Long, ByVal tag As Long) As Long
Declare Function QuickUsbEraseEpcs Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal nSS As Byte, ByVal flags As Long, _
   ByVal callback As Long, ByVal tag As Long) As Long


'=============================================================================
' Firmware Programming API
'=============================================================================
Declare Function QuickUsbWriteFirmware Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal fileName As String, ByVal Options As Long, _
   ByVal callback As Long, ByVal tag As Long) As Long
Declare Function QuickUsbVerifyFirmware Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal fileName As String, _
   ByVal callback As Long, ByVal tag As Long) As Long


'=============================================================================
' General Purpose Functions
'=============================================================================
Public Function Min(x As Variant, y As Variant) As Variant
   If (x < y) Then
      Min = x
   Else
      Min = y
   End If
End Function


Public Function Max(x As Variant, y As Variant) As Variant
   If (x > y) Then
      Max = x
   Else
      Max = y
   End If
End Function


Public Function Align(length As Variant, blockSize As Variant) As Variant
   If (length Mod blockSize = 0) Then
      Align = length
   Else
      Align = length + (length Mod blockSize)
   End If
End Function


Public Function asHex(theData As Variant, length As Variant) As String
   Const digits As String = "0123456789ABCDEF"
   Dim pow2 As Variant
   Dim digit As Variant
   Dim tempStr As String
      
   pow2 = Array( _
      &H1, &H2, &H4, &H8, _
      &H10, &H20, &H40, &H80, _
      &H100, &H200, &H400, &H800, _
      &H1000, &H2000, &H4000, &H8000, _
      &H10000, &H20000, &H40000, &H80000, _
      &H100000, &H200000, &H400000, &H800000 _
   )
   For digit = length - 1 To 0 Step -1
      tempStr = tempStr & Mid(digits, ((theData \ pow2(digit * 4)) And &HF) + 1, 1)
   Next
   asHex = tempStr
End Function


Function ByteArrayToString(theData() As Byte) As String
   Dim count As Integer
   Dim theString As String
   
   For count = 0 To UBound(theData) - 1
      theString = theString & "&h" & asHex(theData(count), 2) & " "
   Next
   ByteArrayToString = theString
End Function


Function StringToByteArray(theData() As Byte, theString As String) As Integer
   Dim dataIndex As Integer
   Dim startStrIndex As Long
   Dim endStrIndex As Integer
   Dim strlen As Integer
   
   ' Exit for an empty string
   If (Len(theString) = 0) Then
      StringToByteArray = 0
      Exit Function
   End If
   
   ' Allocate space for the data
   ReDim theData(Len(theString))         ' Guess that the data length is the maximum
   
   ' Parse text and put it into the array
   dataIndex = 0
   startStrIndex = 1
   strlen = Len(theString)
   Do While (startStrIndex <= strlen)
      ' Find the first non-space
      Do While (Mid(theString, startStrIndex, 1) = " " And startStrIndex <= strlen)
         startStrIndex = startStrIndex + 1
      Loop
      
      ' Find the first space
      endStrIndex = startStrIndex
      Do While (Mid(theString, endStrIndex, 1) <> " " And endStrIndex <= strlen)
         endStrIndex = endStrIndex + 1
      Loop
      
      ' Get the text
      theData(dataIndex) = CByte(Val(Mid(theString, startStrIndex, endStrIndex - startStrIndex)) And &HFF)
      dataIndex = dataIndex + 1
      startStrIndex = endStrIndex
   Loop
   
   ' Resize the data to the right length
   ReDim Preserve theData(dataIndex - 1)
   
   ' Return the actual length
   StringToByteArray = dataIndex
End Function



Public Sub WriteSetting(devName As String, settingNum As Integer, theValue As Integer)
   Dim hDevice As Long
   Dim result As Long
   
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open Device:" & devName
      Exit Sub
   End If
   
   result = QuickUsbWriteSetting(hDevice, settingNum, theValue)

   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "Cannot write setting"
      Exit Sub
   End If
   
End Sub


Public Sub ReadSetting(devName As String, settingNum As Integer, ByRef theValue As Integer)
   Dim hDevice As Long
   Dim result As Long
   
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open Device:" & devName
      Exit Sub
   End If
   
   result = QuickUsbReadSetting(hDevice, settingNum, theValue)

   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "Cannot write setting"
      Exit Sub
   End If
   
End Sub


' This function came from Microsoft Knowledge Base article Q175512
Public Function GetShortName(ByVal sLongFileName As String) As String
    Dim lRetVal As Long, sShortPathName As String, iLen As Integer
    'Set up buffer area for API function call return
    sShortPathName = Space(255)
    iLen = Len(sShortPathName)
